--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "jgohyeah.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jgOhYeah
+linkedin_username: jotham-gates-6a460a243
 
 # Build settings
 theme: minima
